--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta content="utf-8" />
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <title>Jose Barrera</title>
@@ -10,7 +10,10 @@
         <meta name="description" content="Some description"/>
 
         <link rel="stylesheet" href="styles.css"/>
-        <!-- How do I add in that icon that shows up in the tab? -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
 
         <!-- OGP tags -->
         <meta name="og:title" content="Some title"/>
