--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
 
-        <!-- OGP tags -->
-        <meta name="og:title" content="Some title"/>
-        <meta name="og:type" content="website"/>
-        <meta name="og:url" content="https://jose-barrera.com"/>
-        <meta name="og:description" content="Some description"/>
-        <meta name="image" content="i-need-to-figure-out-what-the-image-should-be.png"/>
+        <!-- OGP tags and twitter tags-->
+        <meta property="og:title" content="Jose Barrera - Software Developer & Tech Explorer" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://jose-barrera.com/" />
+        <meta property="og:description" content="Hi, I'm Jose - an early-career software developer building polished web projects and self-hosting adventures." />
+        <meta property="og:image" content="https://jose-barrera.com/assets/preview-card.png" />
+
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Jose Barrera - Software Developer" />
+        <meta name="twitter:description" content="Follow my journey through dev projects and self-hosted tools." />
+        <meta name="twitter:image" content="https://jose-barrera.com/assets/preview-card.png" />
+
     </head>
     <body>
         <header>
