--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <link rel="manifest" href="/site.webmanifest">
 
         <!-- OGP tags and twitter tags-->
-        <meta property="og:title" content="Jose Barrera - Software Developer & Tech Explorer" />
+        <meta property="og:title" content="Hey, I'm Jose. I build things with code" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://jose-barrera.com/" />
-        <meta property="og:description" content="Hi, I'm Jose - an early-career software developer building polished web projects and self-hosting adventures." />
+        <meta property="og:description" content="I'm an early-career software developer sharing my projects, experiments, and self-hosting journey. Always learning, always building." />
         <meta property="og:image" content="https://jose-barrera.com/assets/preview-card.png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
 
+        <!-- Twitter specific -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Jose Barrera - Software Developer" />
-        <meta name="twitter:description" content="Follow my journey through dev projects and self-hosted tools." />
+        <meta name="twitter:title" content="Hey, I'm Jose. I build things with code" />
+        <meta name="twitter:description" content="I'm working on fun, functional tools. From web apps to homelab setups." />
         <meta name="twitter:image" content="https://jose-barrera.com/assets/preview-card.png" />
 
     </head>
