--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Jose Barrera</title>
 
         <meta name="author" content="Jose Barrera"/>
-        <meta name="description" content="Some description"/>
+        <meta name="description" content="I'm an early-career software developer sharing my projects, experiments, and self-hosting journey. Always learning, always building."/>
 
         <link rel="stylesheet" href="styles.css"/>
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
