Fixed minor bug.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <h2>Projects</h2>
                 <p>Coming soon...</p>
             </section>
-            <setion>
+            <section>
                 <h2>Contact</h2>
                 <p>Email: hello@jose-barrera.com (soon!)</p>
-            </setion>
+            </section>
         </main>
         <footer>
             <p>&copy 2025 Jose Barrera</p>
