Added cloudflare web analytics.

--- a/index.html
+++ b/index.html
@@ -268,4 +268,7 @@
             </div>
         </footer>
     </body>
+    <!-- Cloudflare Web Analytics -->
+     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "8781751b029c4d3491566ad0bc65e552"}'></script>
+     <!-- End Cloudflare Web Analytics -->
 </html>
