feat: updated about and hero sections.

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                 <div class="container">
                     <div class="hero-content">
                         <h1>Hello, I'm <span>Jose Barrera</span></h1>
-                        <h2>Software Developer</h2>
-                        <p><strong>I build things with code.</strong></p>
+                        <h2>Technical Engineer</h2>
+                        <p class="specializations">Cloud • Software • Systems • Data</p>
+                        <p><strong>I work where cloud, systems, and data meet.</strong></p>
                     </div>
                 </div>
             </section>
@@ -63,38 +64,38 @@
         <main>
             <!-- About Me Section -->
             <section id="about" class="about">
-            <div class="container">
-                <h2 class="section-title">About Me</h2>
-                <div class="about-content">
-                    <div class="about-image">
-                        <figure>
-                            <img src="assets/me.jpeg" alt="Professional headshot of Jose Barrera"/>
-                        </figure>
-                    </div>
-                    <div class="about-text">
-                        <article>
-                            <h3>Software Developer based in Texas</h3>
-                            <p>I graduated in Fall 2024 with a B.S. in Computer Science from UT Tyler and am currently working as a Software Developer at a local startup, where I help design and build full-stack features while shaping the product’s foundation.</p>
-                            <p>I’m passionate about creating practical tools and continuously developing my skills. Beyond my professional work, I’ve grown my experience through personal projects and hands-on experimentation with web frameworks, RESTful APIs, and databases.</p>
-                            <div class="about-details">
-                                <div class="detail">
-                                    <span class="label">Name:</span>
-                                    <span class="value">Jose Barrera</span>
+                <div class="container">
+                    <h2 class="section-title">About Me</h2>
+                    <div class="about-content">
+                        <div class="about-image">
+                            <figure>
+                                <img src="assets/me.jpeg" alt="Professional headshot of Jose Barrera"/>
+                            </figure>
+                        </div>
+                        <div class="about-text">
+                            <article>
+                                <h3>Technical Engineer based in Texas</h3>
+                                <p>I'm a Technical Engineer with a background in software development, cloud infrastructure, and systems engineering. I graduated with a B.S. in Computer Science from UT Tyler, and I've previously built full-stack features, backend systems, and internal tools at a local SaaS company.</p>
+                                <p>My work naturally gravitates toward the intersection of cloud, systems, and data. This includes designing infrastructure, automating workflows, and creating practical tools that improve reliability. Recent projects involve AWS, Proxmox, REST APIs, and DevOps tooling.</p>
+                                <div class="about-details">
+                                    <div class="detail">
+                                        <span class="label">Name:</span>
+                                        <span class="value">Jose Barrera</span>
+                                    </div>
+                                    <div class="detail">
+                                        <span class="label">Email:</span>
+                                        <span class="value"><a href="mailto:jfbarrera2002@gmail.com">jfbarrera2002@gmail.com</a></span>
+                                    </div>
+                                    <div class="detail">
+                                        <span class="label">Location:</span>
+                                        <span class="value">Tyler, Texas</span>
+                                    </div>
                                 </div>
-                                <div class="detail">
-                                    <span class="label">Email:</span>
-                                    <span class="value"><a href="mailto:jfbarrera2002@gmail.com">jfbarrera2002@gmail.com</a></span>
-                                </div>
-                                <div class="detail">
-                                    <span class="label">Location:</span>
-                                    <span class="value">Tyler, Texas</span>
-                                </div>
-                            </div>
-                            <a href="assets/Jose-Barrera-Resume.pdf" download="Jose Barrera - Resume" title="Download my resume as a PDF" class="btn primary-btn">Download My Resume</a>
-                        </article>
+                                <a href="assets/Jose-Barrera-Resume.pdf" download="Jose Barrera - Resume" title="Download my resume as a PDF" class="btn primary-btn">Download My Resume</a>
+                            </article>
+                        </div>
                     </div>
                 </div>
-            </div>
             </section>
 
             <!-- My Skills Section -->
