feat: updated meta tags accordingly and added a new preview-card

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-        <title>Jose Barrera</title>
+        <!-- Primary SEO -->
+        <title>Jose Barrera | Technical Engineer - Cloud • Systems • Data</title>
+        <link rel="canonical" href="https://jose-barrera.com/">
+        <meta name="description" content="Technical Engineer based in Texas focused on cloud infrastructure, software development, systems engineering, and data. I design infrastructure, automate workflows, and build practical tools with AWS, Proxmox, REST APIs, and DevOps tooling." />
+        <meta name="author" content="Jose Barrera" />
+        <meta name="robots" content="index,follow" />
+        <meta name="theme-color" content="#0b5ed7" />
 
-        <meta name="author" content="Jose Barrera"/>
-        <meta name="description" content="I'm an early-career software developer sharing my projects, experiments, and self-hosting journey. Always learning, always building."/>
-
+        <!-- Styles & Icons -->
         <link rel="stylesheet" href="styles.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -16,21 +20,24 @@
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
 
-        <!-- OGP tags and twitter tags-->
-        <meta property="og:title" content="Hey, I'm Jose. I build things with code" />
+        <!-- Open Graph (LinkedIn, Facebook, Slack, etc.) -->
         <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="Jose Barrera" />
+        <meta property="og:locale" content="en_US" />
         <meta property="og:url" content="https://jose-barrera.com/" />
-        <meta property="og:description" content="I'm an early-career software developer sharing my projects, experiments, and self-hosting journey. Always learning, always building." />
+        <meta property="og:title" content="Jose Barrera - Technical Engineer" />
+        <meta property="og:description" content="I work where cloud, systems, and data meet. Recent work: AWS, Proxmox, REST APIs, automation, and DevOps tooling." />
         <meta property="og:image" content="https://jose-barrera.com/assets/preview-card.png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
+        <meta property="og:image:alt" content="Preview card for Jose Barrera - Technical Engineer" />
 
-        <!-- Twitter specific -->
+        <!-- Twitter Card (nice to have) -->
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:title" content="Hey, I'm Jose. I build things with code" />
-        <meta name="twitter:description" content="I'm working on fun, functional tools. From web apps to homelab setups." />
+        <meta name="twitter:title" content="Jose Barrera - Technical Engineer" />
+        <meta name="twitter:description" content="Cloud • Software • Systems • Data. I design infrastructure, automate workflows, and build practical tools." />
         <meta name="twitter:image" content="https://jose-barrera.com/assets/preview-card.png" />
-
+        <meta name="twitter:image:alt" content="Preview card for Jose Barrera - Technical Engineer" />
     </head>
     <body>
         <header id="top">
